--- a/Coursera_Capstone_Project_Notebook.ipynb
+++ b/Coursera_Capstone_Project_Notebook.ipynb
@@ -6,7 +6,8 @@
       "name": "Coursera Capstone Project Notebook",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtMtZKlJ2XQ9uOQSBucH7O"
+      "authorship_tag": "ABX9TyOtMtZKlJ2XQ9uOQSBucH7O",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/quanmtran/Coursera_Capstone/blob/main/Coursera_Capstone_Project_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
