--- a/Coursera_Capstone_Project_Notebook.ipynb
+++ b/Coursera_Capstone_Project_Notebook.ipynb
@@ -6,7 +6,7 @@
       "name": "Coursera Capstone Project - Suburbs in Melbourne - Notebook",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN1xV6RpJdVIOeUsnsptbMb",
+      "authorship_tag": "ABX9TyMGjuf4ZL63U8f6Op82Rgu2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/quanmtran/Coursera_Capstone/blob/main/Coursera_Capstone_Project_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/quanmtran/Coursera-Capstone-Project/blob/main/Coursera_Capstone_Project_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,7 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.cluster import KMeans"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,23 +106,23 @@
         "# Reorder columns\n",
         "df = df[['Suburb', 'Latitude', 'Longitude']]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "_aMrtq_fLI5p",
-        "outputId": "713d0ef8-6bec-4c09-dce4-c17e2c8a74f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "713d0ef8-6bec-4c09-dce4-c17e2c8a74f0"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,15 +206,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "nckZj2mEgPs_",
-        "outputId": "94bc0b53-a4e1-4a97-8654-0fea10285a36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "94bc0b53-a4e1-4a97-8654-0fea10285a36"
       },
       "source": [
         "print('There are {} suburbs along with their coordinates collected.'.format(df.shape[0]))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,11 +247,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "sTlsJvitKSmv",
-        "outputId": "eff82cc5-dc83-4a3a-8d75-87fe457a815c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 763
-        }
+        },
+        "outputId": "eff82cc5-dc83-4a3a-8d75-87fe457a815c"
       },
       "source": [
         "# Get Melbourne's coordinates\n",
@@ -281,7 +281,7 @@
         "    \n",
         "melb_map"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -324,12 +324,12 @@
         "id": "gY1xPlkWhIYW"
       },
       "source": [
-        "CLIENT_ID = 'A2ZJ4CROF23YOL3Q3POSEQUOPVSMPG50CYLYORJGV2NNVC5D' # your Foursquare ID\n",
-        "CLIENT_SECRET = 'KU30MIJOC3GF5E2SK1V0XJU3CSYHS2YIHWVOHW1VTAVMM4DL' # your Foursquare Secret\n",
+        "CLIENT_ID = 'Your_Client_ID' # your Foursquare ID\n",
+        "CLIENT_SECRET = 'Your_Client_Secret' # your Foursquare Secret\n",
         "VERSION = '20201029' # Foursquare API version\n",
         "LIMIT = 100 # A default Foursquare API limit value"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,17 +374,17 @@
         "\n",
         "    return(df_nearby_venues)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "CjD5gj3jh0J7",
-        "outputId": "4f48419e-ebca-40b7-a9be-8ca1eae26f7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f48419e-ebca-40b7-a9be-8ca1eae26f7c"
       },
       "source": [
         "# Get nearby venues of each suburb\n",
@@ -394,7 +394,7 @@
         "\n",
         "print('Done!')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,16 +409,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "poIT5b0YiWD-",
-        "outputId": "61fe9568-c0bd-497c-d3c1-63ee41104ece",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "61fe9568-c0bd-497c-d3c1-63ee41104ece"
       },
       "source": [
         "df_venues.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,15 +516,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "vj6Y3n70bxXl",
-        "outputId": "cecf59ed-f03a-4920-fe2c-b5caa6f934ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cecf59ed-f03a-4920-fe2c-b5caa6f934ae"
       },
       "source": [
         "df_venues.shape"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,17 +544,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "fFQIN48tsGAB",
-        "outputId": "b2a589ec-aac7-4720-a6cc-b3e48112787f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "b2a589ec-aac7-4720-a6cc-b3e48112787f"
       },
       "source": [
         "# Count the number of venues found in each suburb\n",
         "df_venues['Suburb'].value_counts().to_frame().rename(columns={'Suburb': 'Venue count'})"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,16 +668,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "4AdytAQ8bMzj",
-        "outputId": "723db578-8b41-49d5-d012-401194328657",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "723db578-8b41-49d5-d012-401194328657"
       },
       "source": [
         "# Unique values of venue category\n",
         "df_venues['Venue_Category'].unique()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,7 +853,7 @@
         "                      'Garden Center', 'Nature Preserve', 'Scenic Lookout', 'River', 'Monument / Landmark', 'National Park', 'Playground']\n",
         "}"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,18 +869,18 @@
         "      return general_cat\n",
         "  return 'NA'"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "gX55tEVwx8oN",
-        "outputId": "61749b4c-c93b-4c0f-f843-8b4c68bab5fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "61749b4c-c93b-4c0f-f843-8b4c68bab5fa"
       },
       "source": [
         "# Create a new column of category groups\n",
@@ -891,7 +891,7 @@
         "\n",
         "df_venues_filtered.head()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,11 +1004,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "G-BUbHGUzGDR",
-        "outputId": "7acb179d-edac-45de-8959-67fe48597b23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "7acb179d-edac-45de-8959-67fe48597b23"
       },
       "source": [
         "# Count the frequency of category groups in each suburb\n",
@@ -1017,7 +1017,7 @@
         "df_venue_freq = df_venue_freq.groupby('Suburb').sum().reset_index()\n",
         "df_venue_freq.head()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1157,11 +1157,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "vkkUJErbOWIg",
-        "outputId": "913c78f4-b82c-453a-d51c-c32135d168fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "913c78f4-b82c-453a-d51c-c32135d168fa"
       },
       "source": [
         "# Use distance to city and venue frequencies for clustering\n",
@@ -1169,7 +1169,7 @@
         "\n",
         "df_clustering.head()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,10 +1285,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3ztb_CaFpz7a",
-        "outputId": "6999f1aa-cd85-444f-f3df-68394d8e77e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6999f1aa-cd85-444f-f3df-68394d8e77e1"
       },
       "source": [
         "# Standardize data\n",
@@ -1297,7 +1297,7 @@
         "\n",
         "X"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1356,18 +1356,18 @@
         "  kmeans = KMeans(n_clusters=k, n_init=20, random_state=1996).fit(X)\n",
         "  sse.append(kmeans.inertia_)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0DhrTn0X5-Fi",
-        "outputId": "a005168e-dd32-4707-e112-d86d0e0a52ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "outputId": "a005168e-dd32-4707-e112-d86d0e0a52ce"
       },
       "source": [
         "# Elbow plot\n",
@@ -1378,7 +1378,7 @@
         "plt.xticks(k_range)\n",
         "plt.plot(k_range, sse)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1429,10 +1429,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bBasjHXM6Hog",
-        "outputId": "ad2658bd-2907-4ea4-f748-d75b1cde49af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ad2658bd-2907-4ea4-f748-d75b1cde49af"
       },
       "source": [
         "k=4\n",
@@ -1441,7 +1441,7 @@
         "# Cluster labels\n",
         "kmeans.labels_"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1467,11 +1467,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "TAUYr6aAQPDf",
-        "outputId": "cb3da67e-8946-4239-a7ed-28e09bcb9f77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "outputId": "cb3da67e-8946-4239-a7ed-28e09bcb9f77"
       },
       "source": [
         "# Add cluster labels\n",
@@ -1479,7 +1479,7 @@
         "df_final.insert(3, 'Cluster', kmeans.labels_)\n",
         "df_final.head()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1628,11 +1628,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "xMCFQciO8W2_",
-        "outputId": "37afdd63-60cd-4ae8-825b-bf33f789a0c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 763
-        }
+        },
+        "outputId": "37afdd63-60cd-4ae8-825b-bf33f789a0c2"
       },
       "source": [
         "# Create a map of Melbourne\n",
@@ -1662,7 +1662,7 @@
         "       \n",
         "melb_map"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1694,11 +1694,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "lO1f1pEl6Mpl",
-        "outputId": "dcfd74d5-25e5-425d-e38e-2e1cdb60bf35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "dcfd74d5-25e5-425d-e38e-2e1cdb60bf35"
       },
       "source": [
         "# Inverse transform cluster centers, as they were earlier standardized\n",
@@ -1708,7 +1708,7 @@
         "df_clusters.index.name = 'Cluster'\n",
         "df_clusters"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1848,16 +1848,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "XlrTJaGTQ97C",
-        "outputId": "79143eaa-6c3b-45ff-8d5b-773ef379e42c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 726
-        }
+        },
+        "outputId": "79143eaa-6c3b-45ff-8d5b-773ef379e42c"
       },
       "source": [
         "df_final.loc[df_final['Cluster'] == 0, :].reset_index(drop=True)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2214,16 +2214,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "HIRS7EjVRJQj",
-        "outputId": "7b35ae7c-4207-4307-d72d-08e1240f902b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "7b35ae7c-4207-4307-d72d-08e1240f902b"
       },
       "source": [
         "df_final.loc[df_final['Cluster'] == 1, :].reset_index(drop=True)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2772,16 +2772,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "aK51m_nRRNEc",
-        "outputId": "37d28247-cfd8-4986-b62b-c8fc0b87aa69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 743
-        }
+        },
+        "outputId": "37d28247-cfd8-4986-b62b-c8fc0b87aa69"
       },
       "source": [
         "df_final.loc[df_final['Cluster'] == 2, :].reset_index(drop=True)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3138,16 +3138,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Fa01kKh2RP5L",
-        "outputId": "e46f14b1-9e26-42e4-8348-8e00fe61081e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "outputId": "e46f14b1-9e26-42e4-8348-8e00fe61081e"
       },
       "source": [
         "df_final.loc[df_final['Cluster'] == 3, :].reset_index(drop=True)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
